--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   http: ^1.2.2
+  intl: ^0.19.0
   provider: ^6.1.2
   timeline_tile: ^2.0.0
 
