--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,4 +36,5 @@ flutter:
   assets:
     # Add assets from the images directory to the application.
     - assets/images/
+    - assets/images/trips/
     - .env
